--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@types/react": "^19.2.7",
     "@upstash/redis": "^1.35.7",
     "autoprefixer": "^10.4.22",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "lucide-react": "^0.562.0",
     "next": "^14.2.33",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^3.6.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.3"
   }
